--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         </div>
     </div>
 
-    <div id="countdown-outer">
+    <div id="countdown-container">
         <div class="counter" id="first">
             <p class="current">0</p>
             <p class="next">1</p>
         </div>
     </div>
+
+    <script type="text/javascript" src="script.js"></script>
     
 </body>
 </html>
